holy grail completed, coouple issues with the flex - grid and not using wrap properly, rest was easy

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,80 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display:flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;;
+
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display:flex;
+  flex-shrink:0;
+  
+
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  width: 300px;
+  height: 200px;
+  /* min-width: 0; */
+
+
+}
+
+.body-content-container{
+  display:flex;
+}
+
+.card-container{
+  flex-wrap: wrap;
+  display:flex;
+  padding: 48px;
+  gap:16px;
+}
+
+ul{
+  list-style: none;
+  font-size: 24px;
+  display:flex;
+  flex-direction: column;
+  justify-content: start; 
+  align-items: start;
+  padding: 16px;
+  margin: 0;  
+  
+  
+}
+
+a{
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
 }
